--- a/index.html
+++ b/index.html
@@ -2,12 +2,46 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Яндекс.Дом</title>
+    <link
+      rel="preload"
+      as="font"
+      href="src/assets/lato.woff2"
+      type="font/woff2"
+      crossorigin="anonymous"
+    />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" type="text/css" href="reset.css" />
+    <link rel="stylesheet" type="text/css" href="src/styles.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="app"></div>
+
+    <footer class="footer">
+      <ul class="footer__list">
+        <li class="footer__item">
+          <a class="footer__link" href="/">Помощь</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="/">Обратная связь</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="/">Разработчикам</a>
+        </li>
+        <li class="footer__item">
+          <a class="footer__link" href="/">Условия использования</a>
+        </li>
+      </ul>
+
+      <div class="footer__copyright">© 1997–2023 ООО «Яндекс»</div>
+    </footer>
+
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
